fix - 'Last updated' date is not displaying on service dashboards on mobile (#223)

--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -300,3 +300,12 @@
     }
   }
 }
+
+
+.dashboard__below-the-line {
+  .has-data-true {
+    .widget__last-updated {
+      display: block !important;
+    }
+  }
+}
